# 811poc

./: .coverage  .env  .env.local  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  PARCEL_ENRICHMENT_INTEGRATION.md  README.md  claude_desktop_config_railway.json  clean_responses.py  debug_geocoding.py  fix_ticket_status.py  package-lock.json  pyproject.toml  railway.json  railway.toml  requirements.txt  start.sh  test_ca_geocoding.py
.agent-os/instructions/core/: analyze-product.md  create-spec.md  execute-task.md  execute-tasks.md  plan-product.md
.agent-os/instructions/meta/: pre-flight.md
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-08-31-backend-baseline-implementation-#1/: spec.md  tasks.md
.agent-os/specs/2025-09-01-railway-deployment-cicd-#3/: spec.md  tasks.md
.agent-os/specs/2025-09-02-expanded-response-tracking-#5/: spec.md  tasks.md
.agent-os/specs/2025-09-02-frontend-backend-integration-2/: spec.md  tasks.md
.agent-os/specs/2025-09-02-gis-parcel-enrichment-#4/: spec.md  tasks.md
.agent-os/specs/2025-09-02-integration-fixes/: frontend-ui-fixes-plan.md  tasks.md
.agent-os/specs/2025-09-03-ticket-sync-script/: spec.md  tasks.md  tests.md
.agent-os/standards/: best-practices.md  code-style.md  tech-stack.md
.github/workflows/: deploy.yml
data/audit/: 2025-09-02.json  2025-09-03.json
data/responses/0FJH/: COMST.json  CPTEN02.json  ETX01.json  (+6 more)
data/tickets/: 0FJH.json  1N7I.json  29VR.json  3HSE.json  5C7T.json  9NQ0.json  A7BP.json  CJCU.json  EXOB.json  GRC3.json  M7NA.json  OSEI.json  UEY5.json  US28.json  VRX6.json  YDM7.json  Z6I5.json
docs/: api-endpoints.md  gis-integration.md  github-secrets-setup.md  production-environment.md  railway-storage-guide.md
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  playwright.config.ts.backup  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/hooks/: use-ticket-responses.ts
frontend/lib/: api.ts  format.ts  gps-utils.ts  mock-data.ts  mockData.ts  types.ts  utility-members.ts
frontend/playwright-report/: index.html
frontend/scrape/: DEBUGGING_REPORT.md  README.md  codegen-record.js  debug-pagination.js  debug-row-selection-fixed.js  debug-row-selection.js  debug-search.js  debug-table-finder.js  debug-table-structure.js  discover-ticket-fields.js  implementation-guide.md  package-lock.json  package.json  product-scraper.spec.js  quotes-scraper-annotated.js  quotes-scraper-llm-ready.js  quotes-scraper.spec.js  test-one-ticket.js  test-print-dialog-fixes.js  test-recording.spec.js  test-scraper.js  texas811-2-expanded-annotations.js  texas811-2.spec.js  texas811-production-scraper-final.js  texas811-production-scraper-fixed.js  texas811-production-scraper.js  texas811-tickets-2025-09-03.json  texas811.spec.js
frontend/tests/: debug-issues.spec.ts  gps-validation.spec.ts  integration.spec.ts  verify-playwright.spec.ts
scrape/: --options  .gitignore  FIXES_SUMMARY.md  README.md  annotate-recording.js  demo-recording.js  package-lock.json  package.json  playwright.config.js  record-session.js  texas811-all-tickets-2025-09-03.json  texas811-conversion-summary.md  texas811-production-scraper-final.js  texas811-production-scraper-print-suppressed.js  texas811-production-scraper-with-fixes.js
scripts/: README.md  requirements.txt  sync_tickets.py  test_sync.py  usage_example.py
src/: startup.py
src/texas811_poc/: __init__.py  api_endpoints.py  api_models.py  compliance.py  config.py  dashboard_endpoints.py  geocoding.py  logging_config.py  main.py  member_management.py  migrations.py  models.py  redis_client.py  seed_data.py  state_machine.py  status_calculation_example.py  status_calculator.py  storage.py  test_status_calculation.py  validation.py
tests/: README.md  __init__.py  conftest.py  test_api_endpoints.py  test_cad_resolvers.py  test_compliance.py  test_config.py  test_dashboard_endpoints.py  test_deployment.py  test_deployment_workflow.py  test_geocoding.py  test_integration.py  test_main.py  test_member_management.py  test_member_management_integration.py  test_member_response_models.py  test_migrations.py  test_models.py  test_parcel_enrichment.py  test_poc_demo.py  test_production_config.py  test_redis_client.py  test_response_retrieval_api_simple.py  test_response_submission_api.py  test_state_machine.py  test_storage.py  test_validation.py
tests/fixtures/: sample_work_orders.json
(+144 files in other folders)
